# subtitles

./: README.md  subtitles.cabal
src/Subtitles/: Main.hs  Subtitle.hs  Test.hs
src/Subtitles/Effect/: Overlapping.hs
src/Subtitles/Plugin/: Ass.hs  Srt.hs
